# tauri-plugin-task-queue

./: .gitignore  Cargo.toml  README.md  build.rs
example/: README.md  index.html  package.json  pnpm-lock.yaml  script.js  style.css  vite.config.js
example/src/: App.jsx  main.jsx
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs  main.rs
example/src/components/: TaskForm.jsx  TaskList.jsx
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: enqueue_task.toml  get_all_tasks.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  task.rs
src/core/: error.rs  manager.rs  mod.rs  state.rs  task.rs
