[package]
name = "tauri-plugin-task-queue"
version = "2.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "tauri_plugin_task_queue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0" }

[dependencies]
tauri = { version = "2.8.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }

