[package]
name = "tauri-plugin-task-queue"
version = "1.0.0"
authors = ["Tauri Apps"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/tauri-apps/tauri-plugin-task-queue"
links = "tauri-plugin-task-queue"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "Apps installed via MSI or NSIS in `perMachine` and `both` mode require admin permissions for write access in `$RESOURCES` folder" }
linux = { level = "full", notes = "No write access to `$RESOURCES` folder" }
macos = { level = "full", notes = "No write access to `$RESOURCES` folder" }
android = { level = "partial", notes = "Access is restricted to Application folder by default" }
ios = { level = "partial", notes = "Access is restricted to Application folder by default" }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[dependencies]
tauri = { version = "2.8.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }