[package]
name = "tauri_plugin_task_queue_demo"
version = "1.0.0"
description = ""
authors = ["iriscat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_plugin_task_queue_demo"
crate-type = ["staticlib", "cdylib", "rlib"]

[build]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
target_arch = "x86_64"

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2.8.3", features = ["devtools"] }

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# 本地路径依赖
tauri-plugin-task-queue = { path = "../../../tauri-plugin-task-queue" }
